# osqp-sqp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  format.sh  main.cpp
.github/workflows/: build_and_test.yaml
cpp/: main.cpp  osqp_sqp.hpp  osqpsqp.cpp  osqpsqp.hpp
example/: double_integrator.cpp  plot.py
test/: plot_optimized_trajectory.py  test_constraints.cpp  test_nlp_simple.cpp  test_osqp_sqp.cpp  test_trajectory_optimization.cpp
